--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.shopthucung">
@@ -26,7 +25,6 @@
         android:theme="@style/Theme.ShopThuCung"
         tools:targetApi="31">
 
-        <!-- MainActivity trong package: com.example.shopthucung.user -->
         <activity
             android:name="com.example.shopthucung.user.UserActivity"
             android:exported="true"
@@ -35,21 +33,14 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:scheme="myapp"
+                    android:host="payment"
+                    android:path="/verify" />
             </intent-filter>
         </activity>
-
-        <!-- AdminActivity trong package: com.example.shopthucung.admin -->
-        <activity
-            android:name="com.example.shopthucung.admin.AdminActivity"
-            android:exported="true"
-            android:label="Admin - ShopThuCung"
-            android:theme="@style/Theme.ShopThuCung">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
     </application>
-
 </manifest>
